tests/fixtures/invalid/just_print.py
"""Invalid PyATB script - just print statement, no pyatb usage."""

print("Hello, world!")
